--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,9 @@ body {
 }
 
 .subJudul {
+  font-family: "Kavoon", cursive;
   /* font-family: "Balsamiq Sans", cursive; */
-  -webkit-text-stroke: 2px black;
+  -webkit-text-stroke: 1px black;
 }
 
 .stroke {
